Alignment fix.

--- a/css/base.less
+++ b/css/base.less
@@ -130,6 +130,7 @@
     ul.comments {
       list-style: none;
       padding: 0;
+      margin: 0;
 
       li {
         overflow: hidden;
