--- a/css/default-theme.less
+++ b/css/default-theme.less
@@ -6,7 +6,7 @@
   }
 
   &.has-comments .comments-wrapper {
-    top: -37px;
+    top: -22px;
   }
 
   ul.comments li {
